syntax = "proto3";

option csharp_namespace = "ProjectName.PlannerService";

package planner;

service Planner {
  rpc CreatePlan (PlanRequest) returns (PlanResponse);
  rpc ValidateOutcome (ValidationRequest) returns (ValidationResponse);
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
}

message PlanRequest {
  string intent = 1;
}

message PlanResponse {
  bool success = 1;
  string goal = 2;
  repeated PlanStepMessage steps = 3;
  string analysis = 4;
  string errorMessage = 5;
}

message PlanStepMessage {
  int32 order = 1;
  string action = 2;
  string tool = 3;
  string argumentsJson = 4;
}

message ValidationRequest {
  string intent = 1;
  string executionLog = 2;
}

message ValidationResponse {
  bool success = 1;
  string validationJson = 2;
  string errorMessage = 3;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
  string message = 2;
}